Improve news page layout Fix forums unread icon Fix double linebreaks in BBcode Increase colour darkness

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -59,7 +59,7 @@ $dark-gray: #21262A;
 $medium-gray: #2F383D;
 
 $light-blue: darken(#2FB0E7, 10);
-$light-gray: #ECF1F5;
+$light-gray: darken(#ECF1F5, 10);
 $light-red: #e56c69;
 $light-yellow: #FFF6BF;
 $light-green: #1f7f5c;
@@ -106,3 +106,4 @@ $button-text: white;
 */
 
 $content-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.15);
+$light-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.1);
