--- a/app/assets/stylesheets/components/_breadcrumbs.scss
+++ b/app/assets/stylesheets/components/_breadcrumbs.scss
@@ -8,6 +8,7 @@
 
   a {
     display: inline-block;
+    font-size: $base-font-size + 2px;
   }
 
   .fa {
