--- a/app/assets/stylesheets/components/_forms.scss
+++ b/app/assets/stylesheets/components/_forms.scss
@@ -42,7 +42,7 @@ form {
     }
 
     .select-wrapper {
-      $select-padding: 7px;
+      $select-padding: 6px;
       $select-height: $input-height - 4px;
 
       border-radius: $input-border-radius;
