--- a/app/assets/stylesheets/pages/_forums.scss
+++ b/app/assets/stylesheets/pages/_forums.scss
@@ -34,7 +34,7 @@ div#categories {
       repeat: no-repeat;
     }
 
-    &.highlight {
+    &.updated {
       background-image: image-url('layout/forum-category-highlight.png');
     }
   }
